--- a/Sources/LumaKitShare/Presentation/Modules/Share/Components/DestinationSelectView/DestinationSelectView.xib
+++ b/Sources/LumaKitShare/Presentation/Modules/Share/Components/DestinationSelectView/DestinationSelectView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -60,7 +60,9 @@
                             <rect key="frame" x="43" y="126" width="307" height="94"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="94" id="3Iq-uV-lns"/>
+                                <constraint firstAttribute="height" constant="94" id="3Iq-uV-lns">
+                                    <variation key="heightClass=regular-userInterfaceIdiom=mac-widthClass=compact" constant="112"/>
+                                </constraint>
                                 <constraint firstAttribute="width" constant="307" id="bOv-Sd-Alh"/>
                             </constraints>
                         </view>
