--- a/Sources/LumaKit/Presentation/Coordinators/MediaPickerCoordinator/Modules/WebSearch/WebSearchViewController.xib
+++ b/Sources/LumaKit/Presentation/Coordinators/MediaPickerCoordinator/Modules/WebSearch/WebSearchViewController.xib
@@ -27,7 +27,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="To1-4q-f6V" userLabel="collectionView">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="To1-4q-f6V" userLabel="collectionView">
                     <rect key="frame" x="0.0" y="206" width="393" height="646"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewLayout key="collectionViewLayout" id="i9p-eE-p0I" userLabel="collectionViewLayout" customClass="WaterfallCollectionViewLayout" customModule="LumaKit">
