--- a/Sources/LumaKitShare/Presentation/Modules/Feedback/FeedbackViewController.xib
+++ b/Sources/LumaKitShare/Presentation/Modules/Feedback/FeedbackViewController.xib
@@ -16,7 +16,7 @@
                 <outlet property="contentView" destination="W7E-0w-4QZ" id="2i9-1K-1ey"/>
                 <outlet property="contentViewCenterYConstraint" destination="iyY-CL-tYE" id="we6-wX-jsl"/>
                 <outlet property="dismissButton" destination="eTR-78-6Gl" id="4oH-h9-Y6S"/>
-                <outlet property="glassBorderView" destination="R1x-2G-FaG" id="hnS-Sg-PXM"/>
+                <outlet property="materialBorderView" destination="R1x-2G-FaG" id="Dbj-eF-AKf"/>
                 <outlet property="placeholderLabel" destination="3yj-VW-5Ku" id="UQk-2I-VpP"/>
                 <outlet property="subtitleLabel" destination="K8d-sx-Pjw" id="6Gm-KL-DrP"/>
                 <outlet property="textView" destination="g8P-QJ-qle" id="dIh-cd-TDX"/>
@@ -54,7 +54,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <view hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R1x-2G-FaG" userLabel="glassBorderView" customClass="GlassBorderView" customModule="LumaKit">
+                        <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R1x-2G-FaG" userLabel="materialBorderView" customClass="MaterialBorderView" customModule="LumaKit">
                             <rect key="frame" x="22" y="143.33333333333331" width="256" height="90"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
